<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel" type="com.marasavan.navapp.feature.onboarding.viewModel.UserInfoViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:id="@+id/name_label" android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/size_larger"
                app:layout_constraintTop_toTopOf="@+id/name" app:layout_constraintBottom_toBottomOf="@+id/name"/>

        <EditText
                android:id="@+id/name"
                tools:text="Mara"
                android:text="@={viewModel.name}"
                android:layout_width="0dp" android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/name_label"
                android:layout_marginStart="@dimen/size_normal"
                app:layout_constraintTop_toTopOf="parent"
                android:inputType="text"
                tools:ignore="Autofill,LabelFor" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/size_larger" android:layout_marginTop="@dimen/size_extra_large"/>

        <TextView
                android:id="@+id/username_label"
                android:text="@string/username"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/size_larger" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/username"/>

        <EditText
                android:id="@+id/username"
                tools:text="MaraBanana"
                android:layout_width="0dp" android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/username_label"
                android:layout_marginStart="@dimen/size_small"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@={viewModel.username}"
                android:layout_marginEnd="@dimen/size_larger" android:inputType="text"
                tools:ignore="Autofill,LabelFor" android:layout_marginTop="@dimen/size_normal"
                app:layout_constraintTop_toBottomOf="@+id/name"/>

        <TextView
                android:id="@+id/password_label"
                android:text="@string/password"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/size_larger"
                app:layout_constraintTop_toTopOf="@+id/password"
                app:layout_constraintBottom_toBottomOf="@+id/password"/>

        <EditText
                android:id="@+id/password"
                tools:text="marabanana99"
                android:layout_width="0dp" android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/size_larger"
                android:text="@={viewModel.password}"
                app:layout_constraintStart_toEndOf="@+id/password_label" android:layout_marginStart="@dimen/size_small"
                android:inputType="textPassword" tools:ignore="Autofill,LabelFor"
                app:layout_constraintTop_toBottomOf="@+id/username" android:layout_marginTop="@dimen/size_normal"/>

        <TextView
                android:id="@+id/confirm_label"
                android:text="@string/confirm"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/size_large"
                app:layout_constraintTop_toTopOf="@+id/confirm" app:layout_constraintBottom_toBottomOf="@+id/confirm"/>

        <EditText
                android:id="@+id/confirm"
                tools:text="marabanana99"
                android:layout_width="0dp" android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/confirm_label"
                android:layout_marginStart="@dimen/size_small"
                android:inputType="textPassword"
                android:text="@={viewModel.confirm}"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/size_large" tools:ignore="Autofill,LabelFor"
                android:layout_marginTop="@dimen/size_normal" app:layout_constraintTop_toBottomOf="@+id/password"/>

    </android.support.constraint.ConstraintLayout>

</layout>